--- a/resources/css/product-show.css
+++ b/resources/css/product-show.css
@@ -1,18 +1,14 @@
-body{
-    background-color: rgb(255, 255, 255);
-}
-h2, h3, h5, h6{
-    font-family: 'Orbitron', sans-serif !important;
-}
-.carousel-show{
-    border-radius: 20px 20px 20px 20px;
-}
-
-img{
-    border-radius: 20px 20px 20px 20px;
-}
-.carousel-item{
-    display: flex;
-    justify-content: start;
-    
-}
+.container{
+    padding: 10px;
+    width: 600px;
+    border: 1px solid #01212d;
+    border-radius: 25px;
+  }
+  
+  .user-image{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    background-color: #FC8505;
+    color: #01212d;
+  }
