--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -11,65 +11,6 @@
 }
 
 
-/* .btnn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #00292d;
-    margin-bottom: 0px;
-    height: 2em;
-    border-bottom-left-radius: 1dvh;
-    border-bottom-right-radius: 1dvh;
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-    width: 100% !important;
-} */
-
-/* .card-body {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        height: 15rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        overflow: scroll;   
-}
-
-
-.ul-cat{
-    padding: 0 !important;
-}
-
-
-.card-text, .card-title {
-    
-    text-align: center;
-    margin: 0;
-}
-
-.card-link {
-    text-decoration: none;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-    letter-spacing: 0.1em;
-}
-
-.card {
-    border-radius: 1dvh;
-    width: 15rem;
-
-} */
-
-.details{
-    list-style-type: none 
-    
-}
-/* .big-container{
-    min-height: 100vh;
-   paddin
-} */
 .card{
     background-color: transparent;
     border: none;
@@ -79,8 +20,16 @@
     display: flex;
     justify-content: space-between;
     z-index: 0;
-}
+    ;
 
+}
+.carousel{
+    border-radius: 25px 25px 25px 25px !important;
+    overflow: hidden !important;
+}
+.face1 {
+    border-radius: 25px 25px 25px 25px !important;
+  }
 .container .card{
     position: relative;
     cursor: pointer;
@@ -103,22 +52,27 @@
     
     transform: translateY(100px);
 }
-
+.container .face2{
+    border-radius: 25px 25px 25px 25px ;
+}
 .container .card:hover .face.face1{
     transform: translateY(0);
 }
 
 .container .card .face.face1 .content{
-    padding: 10px;
-    background-color: #FC8505;
-    /* opacity: 0.2; */
+    padding: 1px;
+   
+    border-radius: 25px 25px 0 0;
     transition: 0.5s;
 }
-
+.carousel:hover{
+    border-radius: 25px 25px 0 0 !important;
+}
 .container .card:hover .face.face1 .content{
     padding: 0;
     image-rendering: fill;
     opacity: 1;
+    border-radius: 0 0 0 0;
 }
 
 .container .card .face.face1 .content h3{
@@ -138,10 +92,12 @@
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
+
 }
 
 .container .card:hover .face.face2{
     transform: translateY(0);
+    border-radius: 0 0 25px 25px ;
     
 }
 
