--- a/resources/css/searchbar.css
+++ b/resources/css/searchbar.css
@@ -2,12 +2,34 @@
 #FC8505
 #01212d
 */
+
+@-webkit-keyframes shadow-drop-center {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 #FC8505;
+              box-shadow: 0 0 0 0 #FC8505;
+    }
+    100% {
+      -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+              box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
+  }
+  @keyframes shadow-drop-center {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 #FC8505;
+              box-shadow: 0 0 0 0 #FC8505;
+    }
+    100% {
+      -webkit-box-shadow: 0 0 20px 0px #FC8505;
+              box-shadow: 0 0 20px 0px #FC8505;
+    }
+  }
 .searchbar{
     margin: 10px;
     background-color: #01212d;
     border-radius: 10px;
     padding: 10px;
     width: 60%;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
 }
 
 form{
@@ -16,15 +38,25 @@ form{
     gap: 6px;
     align-items: center;
     
+    
 }
 .search-input{
     flex: 1 0 130px;
     width: 50%;
+    border:none;
 }
-
+.search-input:focus{
+        -webkit-animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+ 
+}
 .cat-select-button{
-    flex: 1 0 130px;
-    
+    flex: 1 0 130px; 
+    border: none;
+}
+.cat-select-button:focus{
+    -webkit-animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .search-btn{
