--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
 @import 'bootstrap';
 @import 'bootstrap-icons';
 @import '/node_modules/flag-icons/css/flag-icons.min.css';
+
+.category-card {
+    background-color: #01212d;
+    border-radius: 15px;
+    color: white;
+}
+
+.icons-card-category {
+    font-size: 4em;
+}
