--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -22,10 +22,9 @@
 }
 
   
-body {
+.boddy {
     display: flex;
     justify-content: center;
-    background-color: #d6fbfbd8;
 }
 
 .container {
@@ -33,8 +32,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30rem;
-    height: 30rem;
+    width: 30em;
+    height: 30em;
     margin-top: 10vh;
     border-radius: 1em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.65);
@@ -90,7 +89,8 @@ body {
 }
 
 .logo {
-    width: 70%;
+    margin-top: 1em;
+    width: 30%;
 }
 
 button {
@@ -103,8 +103,6 @@ button {
     color:white;
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 1px;
-    
-
 }
 
 .bi-envelope-at, .bi-key, .bi-person, .bi-person-add, .bi-asterisk, .bi-eye, .bi-eye-slash-fill {
@@ -242,12 +240,20 @@ button {
               transform: translateX(-8px);
     }
   }
-/* 
-  .goggle {
-    transform:scale(0.77);
-    -webkit-transform:scale(0.77);
-    transform-origin:0 0;
-    -webkit-transform-origin:0 0;
-  } */
+
+.bottom-text {
+  font-size: 0.8em;
+  color: white;
+}
+
+.bottom-link {
+  text-decoration: none;
+  color: #ff8400;
+  font-size: 0.9em;
+}
+
+a:hover {
+  color: white;
+}
 
  
