--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -1,28 +1,14 @@
+.logo-footer {
+    width: 40%;
+    margin: auto;
+}
+
+.p-footer {
+    color: white;
+    margin-right: 1em;
+}
+
 .footer {
     background-color: #01212d;
-    color: white;
-}
-
-.logu {
-    width: 100px;
-    margin-bottom: 1em;
-}
-
-.left {
-    margin-top: 2em;
-    margin-bottom: 2em;
-}
-
-.right {
-    margin-top: 3em;
-    height: 50vh;
-}
-
-.footer-link {
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #FC8505;
+    height: 2.5em;
 }
