--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,12 +5,24 @@
 .category-card {
     background-color: #01212d;
     border-radius: 15px;
-    color: white;
+    color: #ffffff;  
+    font-size: 4rem;
+}
+.category-card > a{
+    color: #ffffff !important;
+    font-size: 1.2rem;
+}
+.category-card:hover{
+    color: #FF8400;
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+
+}
+.category-card > a:hover{
+    color: #FF8400 !important;
 }
 
-.icons-card-category {
-    font-size: 4em;
-}
 .pressto {
     font-family: Rainy Stars PERSONAL USE;
 }
