--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -297,11 +297,11 @@ i {
   }
   .nav > .nav-links {
     position: absolute;
-    display: block;
+    display: flex;
     width: 100%;
-    background-color: transparent;
+    background-color: #01212d;
     height: 0px;
-    transition: all 0.3s ease-in;
+    transition: 0.3s ease-in;
     overflow-y: hidden;
     top: 50px;
     left: 0px;
@@ -310,8 +310,17 @@ i {
 
   .nav > .nav-links > a {
     display: block;
+    position: absolute;
     width: 100%;
-    
+    left: 42%;
+    top: 40%
+  }
+  .nav > .nav-links > button{
+    display: block;
+    position: absolute;
+    width: 50%;
+    left: 30%;
+    top: 30%
   }
   .nav > #nav-check:not(:checked) ~ .nav-links {
     height: 0px;
