--- a/resources/css/product-show.css
+++ b/resources/css/product-show.css
@@ -3,6 +3,7 @@
     width: 600px;
     border: 1px solid #01212d;
     border-radius: 25px;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
   }
   
   .user-image{
