--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -11,4 +11,12 @@
 .footer {
     background-color: #01212d;
     height: 2.5em;
+    
+    
 }
+
+@media only screen and (max-width: 860px) {
+   .logo-footer{
+    display: none;
+   }
+  }
