--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -11,8 +11,7 @@
 .footer {
     background-color: #01212d;
     height: 2.5em;
-    
-    
+    margin-top:auto;    
 }
 
 @media only screen and (max-width: 860px) {
